add function to every page

--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@
       <a href="loginPage.html" class="btn">Přihlásit se</a>
     </div>
   </body>
+  <footer><h1>Cukrárna Sladké Tajemství</h1></footer>
 </html>
