--- a/loginPage.html
+++ b/loginPage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <header>
+    <a href="index.html"><button>Domů</button></a>
+  </header>
   <body>
     <div>
       <div class="container">
@@ -27,9 +30,5 @@
       <script src="script.js"></script>
     </div>
   </body>
+  <footer><h1>Cukrárna Sladké Tajemství</h1></footer>
 </html>
-
-/*login.html (Stránka pro přihlášení) Formulář pro zadání bezpečnostního kódu
-pro obnovení přístupu. Tlačítko "Odeslat" pro odeslání kódu. Pokud je kód
-správně zadán, přesměrování na stránku pro obnovu hesla. Pokud je kód špatný,
-zobrazí se chybová zpráva.*/
