--- a/resetPassword.html
+++ b/resetPassword.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <header>
+    <a href="index.html"><button>Domů</button></a>
+  </header>
   <body>
     <div class="container">
       <h1>Obnova hesla</h1>
       <form id="resetPasswordForm">
         <label for="newPassword">Nové heslo:</label>
         <input type="password" id="newPassword" name="newPassword" required />
-        <div id="password-strength">
-          <progress id="strength-bar" max="100" value="0"></progress>
-          <div id="strength-display"></div>
-        </div>
-        <button type="submit" class="btn">Potvrdit</button>
+        <meter id="strength-bar" max="100" value="0"></meter>
+        <p id="strength-display">Password strength</p>
+        <button type="submit" id="confirmButton" class="btn" disabled>
+          Potvrdit
+        </button>
       </form>
     </div>
-    <button class="btn btn-success btn-lg btn-block show-strength-btn">
-      Show Password Strength
-    </button>
     <script src="script.js"></script>
   </body>
+  <footer><h1>Cukrárna Sladké Tajemství</h1></footer>
 </html>
