fix a email content

--- a/email.html
+++ b/email.html
@@ -24,31 +24,31 @@
         <h2>Inbox</h2>
         <div class="tab">
           <button class="tablinks" onclick="openMail(event, 'email1')">
-            Bezpečný email 1
+            Pozdravení
           </button>
           <button class="tablinks" onclick="openMail(event, 'email2')">
-            Bezpečný email 2
+            DortoBarvy
           </button>
           <button class="tablinks" onclick="openMail(event, 'phishingEmail')">
-            Podezřelý email
+            Sladká past
           </button>
         </div>
         <div class="email" id="email1">
-          <h3>Bezpečný Email 1</h3>
-          <p>Odesílatel: friend@example.com</p>
-          <p>Předmět: Ahoj, jak se máš?</p>
+          <h3>Pozdravení</h3>
+          <p>Odesílatel: Kája12@example.com</p>
+          <p>Předmět: Objednávka na sto dortíků!</p>
         </div>
         <div class="email" id="email2">
-          <h3>Bezpečný Email 2</h3>
-          <p>Odesílatel: company@example.com</p>
-          <p>Předmět: Nabídka naší nové služby</p>
+          <h3>DortoBarvy</h3>
+          <p>Odesílatel: DortoBarvy@example.com</p>
+          <p>Předmět: Nové barvy na Vaše dorty!</p>
         </div>
         <div class="email" id="phishingEmail">
-          <h3>Podezřelý Email</h3>
-          <p>Odesílatel: unknown@phishing.com</p>
+          <h3>Cukrová léčka</h3>
+          <p>Odesílatel: cukrLep@phishing.com</p>
           <p>Předmět: Urgentní - Zkontrolujte svou bezpečnost!</p>
           <p>
-            Text: Klikněte na následující odkaz a aktualizujte své heslo:
+            Text: Zde klikni na následující odkaz a aktualizuj své heslo:
             <a href="#" id="phishingLink">Aktualizovat heslo</a>
           </p>
         </div>
@@ -59,11 +59,11 @@
         <span class="close">&times;</span>
         <h2>Phishing Attack Detected</h2>
         <p>
-          Kyberzločinec se dostal do počítače prostřednictvím phishingového
-          emailu. Nikdy neklikejte na podezřelé odkazy a nezadávejte své údaje
-          na neznámých webových stránkách.
+          Zlý kyberzločinec se pokusil dostat do počítače pomocí zlého emailu!
+          Nikdy neklikej na divné odkazy a nezadávej své údaje nikomu cizímu na
+          internetu!
         </p>
-        <button id="closePhishingInfo">Zavřít</button>
+        <button id="closePhishingInfo">Dobře!</button>
       </div>
     </div>
     <script src="script.js"></script>
