add styles to page index and body

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Kyber Mise</title>
   </head>
-  <body>
+  <header>
     <h1>Kyberbezpečnostní mise: Zachraňte tajný recept cukrárny</h1>
-    <div class="container">
-      <h1>Vítejte v kyberbezpečnostní misi!</h1>
+  </header>
+  <body>
+    <div class="kyberMise">
+      <h3>Cukrárna Sladké Tajemství</h3>
       <p>
         Jste připraveni stát se hrdiny a zachránit tajný recept na nejlepší
         cukrovinky v naší cukrárně? Kyberpadouch se pokusil ukrást recept, a teď
         je na nás, abychom ho zastavili!
       </p>
-      <p>Ve vaší misi budete muset:</p>
+      <p class="goal">Ve vaší misi budete muset:</p>
       <ul>
         <li>Obnovit přístup k počítači cukrárny.</li>
         <li>Vytvořit nové a silné heslo k tajnému receptu.</li>
@@ -24,5 +27,11 @@
       <a href="loginPage.html" class="btn">Přihlásit se</a>
     </div>
   </body>
-  <footer><h1>Cukrárna Sladké Tajemství</h1></footer>
+  <footer>
+    <img src="img/CODE_Rebels_logo_rgb.png" class="imgCR" />
+    <a
+      href="https://www.freepik.com/free-ai-image/view-tasty-sweet-glazed-donuts_65160846.htm#fromView=search&page=1&position=7&uuid=6a5884a7-c18e-41dc-9e1b-19b531e629f8"
+      >Image by freepik</a
+    >
+  </footer>
 </html>
