add a picture and icon, fix javascript

--- a/email.html
+++ b/email.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <header>
-    <a href="index.html"><button>Domů</button></a>
+    <a class="homeBtn" href="index.html"><button>Domů</button></a>
   </header>
   <body>
     <div id="desktop">
       <div class="icon" id="emailIcon">
-        <img src="email_icon.png" alt="Email" />
+        <img src="img/mailIcon.png" alt="Email" />
       </div>
       <div class="icon" id="treasureIcon">
-        <img src="treasure_icon.png" alt="Trezor" />
+        <img src="img/boxIcon.png" alt="Trezor" />
       </div>
     </div>
     <div id="emailModal" class="modal">
@@ -66,7 +66,16 @@
         <button id="closePhishingInfo">Dobře!</button>
       </div>
     </div>
+
+    <footer>
+      <h1>Cukrárna Sladké Tajemství</h1>
+      <p>
+        <a
+          href="https://www.freepik.com/free-photo/top-view-glazed-doughnuts-with-assortment-candy-marshmallow_6681813.htm#fromView=search&page=1&position=4&uuid=fcb1b21c-392d-4878-835b-95ff992e98b6"
+          >Image by freepik</a
+        >
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
-  <footer><h1>Cukrárna Sladké Tajemství</h1></footer>
 </html>
