--- a/resetPassword.html
+++ b/resetPassword.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <header>
-    <a href="index.html"><button>Domů</button></a>
+    <a class="homeBtn" href="index.html"><button>Domů</button></a>
   </header>
   <body>
     <div class="container">
