--- a/email.html
+++ b/email.html
@@ -17,6 +17,15 @@
       <div class="icon" id="treasureIcon">
         <img src="img/boxIcon.png" alt="Trezor" />
       </div>
+      <div id="treasureMessageModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>
+            Trezor je v bezpečí! Díky používání unikátních a silných hesel jsme
+            předešli kyberútoku.
+          </p>
+        </div>
+      </div>
     </div>
     <div id="emailModal" class="modal">
       <div class="modalContent">
@@ -57,7 +66,7 @@
     <div id="phishingInfoModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Phishing Attack Detected</h2>
+        <h2>HA! Mám tě!</h2>
         <p>
           Zlý kyberzločinec se pokusil dostat do počítače pomocí zlého emailu!
           Nikdy neklikej na divné odkazy a nezadávej své údaje nikomu cizímu na
