fix style to other pages

--- a/email.html
+++ b/email.html
@@ -46,11 +46,18 @@
           <h3>Pozdravení</h3>
           <p>Odesílatel: Kája12@example.com</p>
           <p>Předmět: Objednávka na sto dortíků!</p>
+          <p>
+            Text: Ahoj! Tady Kája. :) Rád bych si objednal sto dobrý dortíků a koblih. Díky
+          </p>
         </div>
         <div class="email" id="email2">
           <h3>DortoBarvy</h3>
           <p>Odesílatel: DortoBarvy@example.com</p>
           <p>Předmět: Nové barvy na Vaše dorty!</p>
+          <p>
+            Text: Podívej se na naši nabídku nových barev:
+            <a href class="urlFree">DortoBarvy.hehu</a>
+          </p>
         </div>
         <div class="email" id="phishingEmail">
           <h3>Cukrová léčka</h3>
@@ -58,7 +65,7 @@
           <p>Předmět: Urgentní - Zkontrolujte svou bezpečnost!</p>
           <p>
             Text: Zde klikni na následující odkaz a aktualizuj své heslo:
-            <a href="#" id="phishingLink">Aktualizovat heslo</a>
+            <a href="#" class="urlFree" id="phishingLink">Aktualizovat heslo</a>
           </p>
         </div>
       </div>
@@ -80,6 +87,7 @@
       <h1>Cukrárna Sladké Tajemství</h1>
       <p>
         <a
+          class="urlFree"
           href="https://www.freepik.com/free-photo/top-view-glazed-doughnuts-with-assortment-candy-marshmallow_6681813.htm#fromView=search&page=1&position=4&uuid=fcb1b21c-392d-4878-835b-95ff992e98b6"
           >Image by freepik</a
         >
