--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <footer>
     <img src="img/CODE_Rebels_logo_rgb.png" class="imgCR" />
     <a
+      class="urlFree"
       href="https://www.freepik.com/free-ai-image/view-tasty-sweet-glazed-donuts_65160846.htm#fromView=search&page=1&position=7&uuid=6a5884a7-c18e-41dc-9e1b-19b531e629f8"
       >Image by freepik</a
     >
